--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -24,15 +24,15 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="64dp"
-                android:layout_marginLeft="64dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
-                android:background="@android:color/holo_green_dark"
+                android:backgroundTint="@color/primary"
                 android:gravity="end"
                 android:padding="8dp"
-                android:text="TextView"
+                android:background="@drawable/tvchat"
+
+
                 android:textColor="@android:color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -61,14 +61,12 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="64dp"
-                android:layout_marginRight="64dp"
                 android:layout_marginBottom="8dp"
-                android:background="@android:color/holo_blue_dark"
+                android:backgroundTint="@color/primary_dark"
                 android:padding="8dp"
-                android:text="TextView"
+                android:background="@drawable/tvchatother"
                 android:textColor="@android:color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
