--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -12,31 +12,40 @@
         android:layout_height="match_parent"
         tools:context=".fragments.ChatFragment">
 
-        <TextView
-            android:id="@+id/titlechat"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/newChatText"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:text="@string/chatfragment"
-            android:textColor="@color/dark_gray"
-            android:textStyle="bold"
-            android:textSize="30sp"
-            android:layout_marginTop="100dp"
-            android:gravity="center"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:ems="10"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            app:layout_constraintEnd_toStartOf="@+id/newChatButton"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/openChat"
+            android:id="@+id/newChatButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="Chat"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/listChatsRecyclerView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="1dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginEnd="1dp"
+            android:layout_marginBottom="1dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:textColor="@color/primary_dark"
-            android:backgroundTint="@color/primary_light"
-            android:text="Open chat" />
-
+            app:layout_constraintTop_toBottomOf="@+id/newChatButton"
+            tools:listitem="@layout/item_chat" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
