--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,6 +24,12 @@
         <item name="android:textColorHighlight">@color/secondary</item>
         <item name="android:fontFamily">@font/roboto</item>
     </style>
+    <style name="lineETchat" parent="Theme.AppCompat.Light">
+        <item name="colorControlNormal">@color/primary_light</item>
+        <item name="colorControlActivated">@color/primary_light</item>
+        <item name="android:textColorHighlight">@color/primary_light</item>
+        <item name="android:fontFamily">@font/roboto</item>
+    </style>
     <style name="compoeditableusu">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
