--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -37,8 +37,9 @@
                     android:layout_marginLeft="32dp"
                     android:layout_marginTop="8dp"
                     android:text="TextView"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/secondary"
                     android:textSize="18sp"
+                    android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
