--- a/app/src/main/res/drawable/chatbutton.xml
+++ b/app/src/main/res/drawable/chatbutton.xml
@@ -1,5 +1,11 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-    <solid android:color="@color/primary_light" />
-
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="oval">
+            <solid android:color="@color/primary_light" />
+        </shape>
+    </item>
+    <item android:drawable="@drawable/ic_chatsend"
+        android:gravity="center"
+        android:right="-2dp"
+       />
+</layer-list>
