--- a/app/src/main/res/layout/favlist_item.xml
+++ b/app/src/main/res/layout/favlist_item.xml
@@ -1,66 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="140dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginBottom="5dp"
+    app:cardBackgroundColor="@color/primary"
+    app:cardCornerRadius="20dp"
+    android:elevation="0dp"
+    app:contentPadding="5dp">
 
-    <LinearLayout
-        android:orientation="horizontal"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:orientation="vertical"
+        android:layout_height="wrap_content">
+        <RelativeLayout
+            android:id="@+id/Rl_fli"
+            android:layout_width="100dp"
+            android:layout_height="140dp"
+            android:layout_marginEnd="5dp"
+            android:background="@color/dark_gray">
+
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/fli_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="@id/linear_btn"
-            android:id="@+id/recycler">
+            android:layout_toEndOf="@id/Rl_fli"
+            android:layout_marginEnd="5dp"
+            android:textColor="@color/black"
+            android:text="TÍTULO DEL PLAN"
+            android:maxLines="1"
+            android:textSize="20dp"
+            android:ellipsize="end"/>
 
-            <TextView
-                android:id="@+id/nameView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/secondary_light" />
-
-            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <TextView
-                    android:id="@+id/dateView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_alignRight="@+id/ev_time"
-                    android:background="@color/secondary_light" />
-                <TextView
-                    android:id="@+id/timeView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_alignLeft="@+id/dateView"
-                    android:background="@color/secondary_light" />
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/placeView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/secondary_light" />
-
-        </LinearLayout>
-
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:orientation="horizontal"
+        <ImageButton
+            android:id="@+id/removeFavBtn"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentEnd="true"
+            android:padding="0dp"
+            android:background="@drawable/love2"
+            />
+        <TextView
+            android:id="@+id/fli_desc"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="right"
-            android:id="@+id/linear_btn">
-            <!--
-            <ImageButton
-                android:id="@+id/favbtn"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:background="@drawable/love"/>-->
-        </LinearLayout>
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_below="@id/fli_title"
+            android:layout_toEndOf="@id/Rl_fli"
+            android:layout_marginEnd="5dp"
+            android:textColor="@color/black"
+            android:text="DESCRIPCION"
+            android:textSize="15dp"
+            android:ellipsize="end"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/fli_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:text="HORA"/>
+
+        <TextView
+            android:id="@+id/fli_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_toEndOf="@id/Rl_fli"
+            android:maxLines="1"
+            android:text="FECHA"/>
+    </RelativeLayout>
+</androidx.cardview.widget.CardView>
