--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -50,7 +50,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="8dp"
-                    android:text="TextView"
+                    android:text="Contact name"
                     android:textColor="@color/secondary"
                     android:textSize="18sp"
                     android:textStyle="bold"
@@ -63,7 +63,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
                     android:layout_marginBottom="8dp"
-                    android:text="TextView"
+                    android:text="Group chat"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@id/chatImage"
                     app:layout_constraintTop_toBottomOf="@+id/chatNameText" />
