change color item message chat

--- a/app/src/main/res/drawable/tvchat.xml
+++ b/app/src/main/res/drawable/tvchat.xml
@@ -6,5 +6,7 @@
         android:right="8dp"
         android:top="8dp"
         android:bottom="8dp" />
-    <solid android:color="@android:color/white" />
+    <stroke
+        android:width="3dp"
+        android:color="@color/primary" />
 </shape>
