--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -27,13 +27,12 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:backgroundTint="@color/primary"
                 android:gravity="end"
                 android:padding="8dp"
                 android:background="@drawable/tvchat"
-
-
-                android:textColor="@android:color/white"
+                android:textColor="@color/primary"
+                android:textStyle="bold"
+                android:text="HOla"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -64,10 +63,11 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="64dp"
                 android:layout_marginBottom="8dp"
-                android:backgroundTint="@color/primary_dark"
                 android:padding="8dp"
                 android:background="@drawable/tvchatother"
-                android:textColor="@android:color/white"
+                android:textColor="@color/primary_dark"
+                android:textStyle="bold"
+                android:text="HOla"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
