--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -37,4 +37,7 @@
         <item name="itemIconTint">@color/bottom_nav_selector</item>
         <item name="itemTextColor">@color/bottom_nav_selector</item>
     </style>
+    <style name="Theme.MeetMap.NoActionBar.Chat" parent="Theme.MeetMap.NoActionBar">
+        <item name="android:statusBarColor">@color/primary_light</item>
+    </style>
 </resources>
