--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -73,5 +73,8 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">fill_horizontal</item>
     </style>
+    <style name="ToolbarTitleStyle" parent="TextAppearance.MaterialComponents.Headline6">
+        <item name="android:textSize">16sp</item>
+    </style>
 
 </resources>
