--- a/app/src/main/res/layout/favlist_item.xml
+++ b/app/src/main/res/layout/favlist_item.xml
@@ -4,8 +4,8 @@
     android:layout_height="140dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="5dp"
-    app:cardBackgroundColor="@color/primary"
-    app:cardCornerRadius="20dp"
+    app:cardBackgroundColor="@color/white"
+    app:cardCornerRadius="15dp"
     android:elevation="0dp"
     app:contentPadding="5dp">
 
@@ -17,8 +17,13 @@
             android:layout_width="100dp"
             android:layout_height="140dp"
             android:layout_marginEnd="5dp"
-            android:background="@color/dark_gray">
-
+            >
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@color/black"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="20dp"/>
         </RelativeLayout>
 
         <TextView
@@ -26,7 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/Rl_fli"
-            android:layout_marginEnd="5dp"
+            android:layout_marginEnd="35dp"
             android:textColor="@color/black"
             android:text="TÍTULO DEL PLAN"
             android:maxLines="1"
@@ -35,8 +40,8 @@
 
         <ImageButton
             android:id="@+id/removeFavBtn"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_alignParentEnd="true"
             android:padding="0dp"
             android:background="@drawable/love2"
