--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,7 +7,7 @@
     <dimen name="appbar_padding_top">8dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="text_size">10sp</dimen>
-
+    <dimen name="location_menu_height">200dp</dimen>
     <dimen name="header_left_padding">16dp</dimen>
     <dimen name="header_height">208dp</dimen>
 
