change styles, colors and strings chats

--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -27,11 +27,11 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:gravity="end"
                 android:padding="8dp"
                 android:background="@drawable/tvchat"
-                android:textColor="@color/primary"
+                android:textColor="@color/secondary"
                 android:text="HOla"
+                android:textAlignment="viewStart"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -64,8 +64,9 @@
                 android:layout_marginBottom="8dp"
                 android:padding="8dp"
                 android:background="@drawable/tvchatother"
-                android:textColor="@color/primary_dark"
+                android:textColor="@color/primary"
                 android:text="HOla"
+                android:textAlignment="viewStart"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
