--- a/app/src/main/res/drawable/chatbutton.xml
+++ b/app/src/main/res/drawable/chatbutton.xml
@@ -1,7 +1,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/primary_light" />
+            <solid android:color="@color/secondary_light" />
         </shape>
     </item>
     <item android:drawable="@drawable/ic_handsend1"
