--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -1,6 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -13,6 +15,28 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.MapFragment"/>
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="180px"
+            android:layout_marginEnd="150px"
+            android:layout_weight="1">
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/chip_group"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                app:singleSelection="true"
+                android:layout_gravity="top|start"
+                app:chipSpacing="8dp"
+                app:chipSpacingHorizontal="8dp"
+                app:chipSpacingVertical="8dp"
+                app:chipBackgroundColor="@color/dark_gray"
+                app:chipStrokeColor="@color/secondary_light"
+                app:chipStrokeWidth="1dp">
+            </com.google.android.material.chip.ChipGroup>
+        </HorizontalScrollView>
+
     </FrameLayout>
 
     <View
