--- a/app/src/main/res/layout/fragment_suscribers.xml
+++ b/app/src/main/res/layout/fragment_suscribers.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".fragments.SuscribersFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:scrollbars="vertical" />
+
 
 </FrameLayout>
