fix: chat style

--- a/app/src/main/res/drawable/tvchatother.xml
+++ b/app/src/main/res/drawable/tvchatother.xml
@@ -8,5 +8,5 @@
         android:bottom="8dp" />
     <stroke
         android:width="2dp"
-        android:color="@color/primary_dark" />
+        android:color="@color/secondary" />
 </shape>
