--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -31,7 +31,6 @@
                 android:padding="8dp"
                 android:background="@drawable/tvchat"
                 android:textColor="@color/primary"
-                android:text="HOla"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -64,8 +63,7 @@
                 android:layout_marginBottom="8dp"
                 android:padding="8dp"
                 android:background="@drawable/tvchatother"
-                android:textColor="@color/primary_dark"
-                android:text="HOla"
+                android:textColor="@color/secondary"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
