Linked firebase with the recyclerview of suscribers so now you can see all the people suscribed in a plan

--- a/app/src/main/res/layout/list_item_suscriber.xml
+++ b/app/src/main/res/layout/list_item_suscriber.xml
@@ -9,6 +9,9 @@
         android:id="@+id/nameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp" />
+        android:textSize="20sp"
+        android:text="nombre"
+        android:layout_marginLeft="100dp"
+        android:textColor="@color/dark_gray"/>
 
 </LinearLayout>
