--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -42,6 +42,7 @@
             android:maxLines="6"
             android:scrollbars="vertical"
             android:fadeScrollbars="false"
+            android:theme="@style/lineETchat"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/sendMessageButton"
             app:layout_constraintStart_toStartOf="parent" />
