--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,9 +25,9 @@
         <item name="android:fontFamily">@font/roboto</item>
     </style>
     <style name="lineETchat" parent="Theme.AppCompat.Light">
-        <item name="colorControlNormal">@color/secondary_light</item>
-        <item name="colorControlActivated">@color/secondary_light</item>
-        <item name="android:textColorHighlight">@color/secondary_light</item>
+        <item name="colorControlNormal">@color/primary_light</item>
+        <item name="colorControlActivated">@color/primary_light</item>
+        <item name="android:textColorHighlight">@color/primary_light</item>
         <item name="android:fontFamily">@font/roboto</item>
     </style>
     <style name="compoeditableusu">
