change slogan splash and get last chat message for chat list

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -41,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Esto es un eslogan molón"
+        android:text="eres TÚ"
         android:fontFamily="@font/concert_one"
         android:textSize="25sp"
         android:textColor="@color/primary_dark"
