change splash time and in the chat list the last message is shown with a double check if it is from the other user and if not, just the message. Delete ListOfChatsActivity.kt

--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -56,16 +56,25 @@
                     android:textStyle="bold"
                     app:layout_constraintStart_toEndOf="@id/chatImage"
                     app:layout_constraintTop_toTopOf="parent" />
-
+                <ImageView
+                    android:id="@+id/chatmessage"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginBottom="8dp"
+                    android:src="@drawable/doublecheck"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/chatImage"
+                    app:layout_constraintTop_toBottomOf="@+id/chatNameText"/>
                 <TextView
                     android:id="@+id/usersTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
+                    android:layout_marginStart="8dp"
                     android:layout_marginBottom="8dp"
                     android:text="Group chat"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/chatImage"
+                    app:layout_constraintStart_toEndOf="@id/chatmessage"
                     app:layout_constraintTop_toBottomOf="@+id/chatNameText" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
