--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,7 +10,8 @@
     <dimen name="location_menu_height">200dp</dimen>
     <dimen name="header_left_padding">16dp</dimen>
     <dimen name="header_height">208dp</dimen>
-
+    <dimen name="cluster_circle_radius">16dp</dimen>  <!-- Tamaño del radio del círculo agrupado -->
+    <dimen name="cluster_text_size">12sp</dimen>  <!-- Tamaño del texto dentro del círculo agrupado -->
     <dimen name="perfil_image_size">64dp</dimen>
     <dimen name="app_bar_height">180dp</dimen>
 </resources>
