change color message current user chat

--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -29,7 +29,7 @@
                 android:layout_marginBottom="8dp"
                 android:padding="8dp"
                 android:background="@drawable/tvchat"
-                android:textColor="@color/primary"
+                android:textColor="@color/primary_dark"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
