--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -41,12 +41,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="eres TÚ"
-        android:fontFamily="@font/concert_one"
-        android:textSize="25sp"
+        android:fontFamily="@font/patrick_hand_sc"
+        android:text="@string/slogan_splash"
         android:textColor="@color/primary_dark"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textStyle="bold"
+        android:textSize="25sp"
+
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/meetmap">
 
     </TextView>
