changed xml for suscribers

--- a/app/src/main/res/layout/list_item_suscriber.xml
+++ b/app/src/main/res/layout/list_item_suscriber.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:padding="16dp">
 
@@ -12,11 +13,14 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="nombre"
-        android:layout_marginLeft="90dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="4dp"
         android:textColor="@color/dark_gray"/>
 
-
+    <Space
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
     <ImageButton
         android:layout_width="35dp"
@@ -24,8 +28,7 @@
         android:background="@drawable/ic_message_square"
         android:backgroundTint="@color/dark_gray"
         android:id="@+id/chat"
-        android:layout_marginLeft="100dp"
-       />
+        android:layout_marginLeft="16dp"/>
 
     <ImageButton
         android:layout_width="35dp"
@@ -33,8 +36,6 @@
         android:background="@drawable/ic_profile"
         android:backgroundTint="@color/dark_gray"
         android:id="@+id/profile"
-        android:layout_marginLeft="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
+        android:layout_marginLeft="10dp"/>
 
 </LinearLayout>
