--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -76,5 +76,10 @@
     <style name="ToolbarTitleStyle" parent="TextAppearance.MaterialComponents.Headline6">
         <item name="android:textSize">16sp</item>
     </style>
+    <style name="ButtonBack" parent="Widget.AppCompat.Button">
+        <item name="android:textColor">@color/secondary</item>
+        <item name="android:background">@drawable/baseline_arrow_back_24</item>
+        <item name="android:padding">8dp</item>
+    </style>
 
 </resources>
