--- a/app/src/main/res/layout/fragment_favourites.xml
+++ b/app/src/main/res/layout/fragment_favourites.xml
@@ -6,6 +6,27 @@ android:layout_height="match_parent"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 tools:context=".fragments.FavouritesFragment">
 
+    <ImageView
+        app:layout_constraintStart_toStartOf="parent"
+        android:id="@+id/emptyRecyclerViewImageView"
+        android:layout_width="280dp"
+        android:layout_height="280dp"
+        android:src="@drawable/nochat"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+    <TextView
+        android:id="@+id/emptyRecyclerViewTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/nochats"
+        android:textStyle="bold"
+        android:fontFamily="@font/concert_one"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@+id/emptyRecyclerViewImageView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/favouriteRv"
         android:layout_width="match_parent"
