--- a/app/src/main/res/layout/fragment_faqs.xml
+++ b/app/src/main/res/layout/fragment_faqs.xml
@@ -14,13 +14,29 @@
         app:layout_constraintStart_toStartOf="@id/leftguide">
 
         <TextView
-            android:id="@+id/pregunta1"
-            style="@style/faqsquestionStyle"
+            android:id="@+id/tvtittle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="48dp"
+            android:fontFamily="@font/roboto"
+            android:text="@string/faqs"
+            android:textColor="@color/dark_gray"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:textAllCaps="true"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="@id/rightguide"
             app:layout_constraintStart_toStartOf="@id/leftguide"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginVertical="65dp"
-            android:text="@string/question1" />
+            />
+        <TextView
+            android:id="@+id/pregunta1"
+            style="@style/faqsquestionStyle"
+            android:layout_marginTop="24dp"
+            android:text="@string/question1"
+            app:layout_constraintEnd_toEndOf="@id/rightguide"
+            app:layout_constraintStart_toStartOf="@id/leftguide"
+            app:layout_constraintTop_toBottomOf="@id/tvtittle"/>
 
         <TextView
             android:id="@+id/respuesta1"
